# unix

./: .gitignore  Makefile  Makefile_(sample)  additional_sources.txt  main.c  progress.txt
include/: clean_code_utils.h
include/c/: header.h
self/ipc/: a.out  main.c
self/ipc/alarm-sigsuspend/: main.c
self/ipc/pr-set-pdeathsig/: main.c
self/ipc/pselect-signals/: build.sh  main.c
self/ipc/system-v-msg-queue/: a.out  main.c
self/network/: CMakeLists.txt  __network  client.c  network.c  server.c  tc.c  ts.c
self/network/stevens/: .gitignore  CMakeLists.txt  README.txt  build.sh  client.c  deploy.sh  server.c  test.c
self/network/stevens/docs/: README.txt
self/network/stevens/docs/module.template/: module.c  readme.txt
self/network/stevens/lib/: CMakeLists.txt  lib.c  lib.h
self/network/stevens/lib/cli/: cli.c  cli.h
self/network/stevens/lib/common/: external.h  utils.c  utils.h
self/network/stevens/lib/error/: error.c  error.h
self/network/stevens/lib/io/: read.c  read.h  write.c  write.h
self/network/stevens/lib/process/: process.c  process.h
self/network/stevens/lib/socket/: socket.c  socket.h
self/network/stevens/research/: CMakeLists.txt  client_research.c  server_research.c
self/network/stevens/research/topics/: build.sh  notes.txt  topic.c
self/network/stevens/scripts/: tcp-state.sh  tcpdump.sh
self/network/test/: CMakeLists.txt  a.out  build.sh  client.c  server.c  tc.c  ts.c
self/stevens/: CMakeLists.txt  build.sh  client.c  server.c  server.c.fork  test.c
self/stevens/docs/: README.txt
self/stevens/docs/module.template/: module.c  module.h
self/stevens/lib/: CMakeLists.txt  lib.h
self/stevens/lib/cli/: cli.c  cli.h
self/stevens/lib/common/: external.h  utils.c  utils.h
self/stevens/lib/error/: error.c
self/stevens/lib/io/: read.c  read.h  write.c  write.h
self/stevens/lib/process/: process.c  process.h
self/stevens/lib/socket/: socket.c  socket.h
self/stevens/research/: CMakeLists.txt  build.sh  client_research.c  server_research.c
self/stevens/research/topics/: build.sh  notes.txt  topic.c
self/stevens/scripts/: ss.sh  tcp-state.sh  tcpdump.sh  useful.txt
source/c/: unit.c
tasks/: additional_sources.txt  dyn_runtime_lib.c  enum_array.c  progress.txt  task_copy.c  task_strace.c
tasks/dynlib_make/: Makefile  dyn_runtime_lib.c
tasks/fork_exec/: main.c
tasks/getopt/: solution.c
tasks/interhost/: nameresolve.c  socket_basics.txt
tasks/interhost/socket_tcp/: client.c  server.c
tasks/interhost/socket_udp/: client  client.c  server  server.c
tasks/interhost/tasks/1/: Makefile  solution.c
tasks/interhost/tasks/2/: solution.c
tasks/interhost/tasks/3/: Makefile  solution.c
tasks/interproc/: io_multiplexing.c  named_pipe.c  shared_memory.c  signals_handling.c  task_popen.c  task_select.c  task_shm.c  task_signals.c  unnamed_pipe.c  unnamed_pipe_popen.c
tasks/multiproc/: task_clone.c  task_daemon.c  task_self_daemon.c
tasks/multiproc/fork_exec/: binary.c  main.c  script.py
tasks/procfs/: task_all_children.c  task_parent_trace.c  task_ppid.c  task_procname_number.c
