CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(NETWORK)
SET(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(__server server.c)
SET_TARGET_PROPERTIES(__server PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(__client client.c)
SET_TARGET_PROPERTIES(__client PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
