CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(NETWORK)
SET(CMAKE_BUILD_TYPE Debug)

# **************************** STATIC LIBRARY **************************** #

SET (LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
ADD_SUBDIRECTORY(${LIB_DIR})

# *************************** MAIN EXECUTABLES *************************** #

ADD_EXECUTABLE(__s server.c)
TARGET_INCLUDE_DIRECTORIES(__s PRIVATE ${CMAKE_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(__s __lib)
SET_TARGET_PROPERTIES(__s PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(__c client.c)
TARGET_INCLUDE_DIRECTORIES(__c PRIVATE ${CMAKE_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(__c __lib)
SET_TARGET_PROPERTIES(__c PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
