CMAKE_MINIMUM_REQUIRED(VERSION 2.8)  # CentOS 7 compatability
PROJECT(NETWORK)
SET(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(__s server.c ${CMAKE_SOURCE_DIR}/lib/lib.c)
TARGET_INCLUDE_DIRECTORIES(__s PRIVATE ${CMAKE_SOURCE_DIR}/lib)
SET_TARGET_PROPERTIES(__s PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(__c client.c ${CMAKE_SOURCE_DIR}/lib/lib.c)
TARGET_INCLUDE_DIRECTORIES(__c PRIVATE ${CMAKE_SOURCE_DIR}/lib)
SET_TARGET_PROPERTIES(__c PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
