CMAKE_MINIMUM_REQUIRED(VERSION 2.8)  # CentOS 7 compatability
PROJECT(RESEARCH)
SET(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(__sr server_research.c ${CMAKE_SOURCE_DIR}/../lib/lib.c)
TARGET_INCLUDE_DIRECTORIES(__sr PRIVATE ${CMAKE_SOURCE_DIR}/../lib)
SET_TARGET_PROPERTIES(__sr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../)

ADD_EXECUTABLE(__cr client_research.c ${CMAKE_SOURCE_DIR}/../lib/lib.c)
TARGET_INCLUDE_DIRECTORIES(__cr PRIVATE ${CMAKE_SOURCE_DIR}/../lib)
SET_TARGET_PROPERTIES(__cr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../)

ADD_EXECUTABLE(__topic topics/topic.c ${CMAKE_SOURCE_DIR}/../lib/lib.c)
TARGET_INCLUDE_DIRECTORIES(__topic PRIVATE ${CMAKE_SOURCE_DIR}/../lib)
SET_TARGET_PROPERTIES(__topic PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../)
