CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(RESEARCH)
SET(CMAKE_BUILD_TYPE Debug)

SET (LIB_DIR ${CMAKE_SOURCE_DIR}/../lib)

# *************************** MAIN EXECUTABLES *************************** #

ADD_EXECUTABLE(__sr server_research.c)
TARGET_INCLUDE_DIRECTORIES(__sr PRIVATE ${LIB_DIR})
TARGET_LINK_LIBRARIES(__sr ${LIB_DIR}/lib__lib.a)
SET_TARGET_PROPERTIES(__sr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../)

ADD_EXECUTABLE(__cr client_research.c)
TARGET_INCLUDE_DIRECTORIES(__cr PRIVATE ${LIB_DIR})
TARGET_LINK_LIBRARIES(__cr ${LIB_DIR}/lib__lib.a)
SET_TARGET_PROPERTIES(__cr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../)

# ******************************** TOPIC ******************************** #

ADD_EXECUTABLE(__topic topics/topic.c)
TARGET_INCLUDE_DIRECTORIES(__topic PRIVATE ${LIB_DIR})
TARGET_LINK_LIBRARIES(__topic ${LIB_DIR}/lib__lib.a)
SET_TARGET_PROPERTIES(__topic PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../)
